--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="hero">
         <nav>
             <!-- Adding logo in the navabar -->
-            <img src="images/logo.png" class="logo">
+            <img src="logo.png" class="logo">
 
             <ul>
                 <li><a href="#"> Features</a></li>
@@ -31,7 +31,7 @@
             <a href="#" class="btn anim">Join Now</a>
         </div>
 
-        <img src="images/pic.png" class="feature-img  anim" >
+        <img src="pic.png" class="feature-img  anim" >
     </div>
     
 </body>
